[project]
name = "workshop-muc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community",
    "langchain-text-splitters",
    "langchain-core",
    "langchain-nvidia-ai-endpoints",
    "langchain",
    "langgraph",
    "typing-extensions",
    "ipython"
]
